# fastapi-template

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yaml
app/: __main__.py  config.py
app/infrastructure/: ioc.py
app/infrastructure/persistance/: db_tables.py
app/infrastructure/persistance/alembic/: env.py
app/presentation/: exception_handlers.py  healthchecks.py
tests/: conftest.py
tests/service/: test_health.py
