[project]
name = "fastapi-template"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.9.1",
    "fastapi>=0.135.1",
    "sqlalchemy[postgresql-asyncpg]>=2.0.48",
    "uuid7>=0.1.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "httpx>=0.28.1",
    "ty>=0.0.23",
    "import-linter>=2.11",
]

[tool.ruff]
target-version = "py314"
line-length = 88
include = [
    "app/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "PT019",
    "ANN401",
    "COM812",
    "EM101",
    "EM102",
    "E731",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "TC001",
    "TC003",
    "ISC001",
    "PGH003",
    "RUF100",
    "C408",
    "FIX002",
    "TD003",
    "TD002",
    "TD004",
    "TC002"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"app/infrastructure/persistance/alembic/**/*.py" = ["INP001"]

[tool.mypy]
python_version = "3.14"
plugins = [
    "pydantic.mypy",
]
strict = true
ignore_missing_imports = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Clean architecture"
type = "layers"
layers = [
    "app.__main__",
    "app.presentation | app.infrastructure",
    "app.application",
    "app.domain",
]
